# lc3b

./: .gitignore  README.md  lc3b.cabal
asm/: Main.hs
lc3b/LC3b/: Assemble.hs
lib/LC3b/: Assemble.hs  IO.hs  Machine.hs  Semantics.hs  Utils.hs
sim/: Main.hs
src/: Main.hs
src/LC3b/: Semantics.hs
tests/: Main.hs  badentry.asm  labels.asm  sum.asm
tests/asm/: add.asm  add.expected  add.out  and.asm  and.expected  bad.asm  badentry.asm  br.asm  br.expected  ld.asm  ld.expected  lea.asm  lea.expected  shf.asm  shf.expected  st.asm  st.expected  sum.asm  sum.expected  sum_array.asm  sum_array.expected  sum_array_data.asm  xor.asm  xor.expected
