name:                lc3b
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lc3b#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          example@example.com
copyright:           2018 Ben Selfridge
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lc3b
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       LC3b.Machine
                       LC3b.Semantics
                       LC3b.Utils
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , mtl >= 2.2 && < 2.3
                     , transformers >= 0.5 && < 0.6