name:                lc3b
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lc3b#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          example@example.com
copyright:           2018 Ben Selfridge
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     LC3b.Assemble
                     , LC3b.Machine
                     , LC3b.Semantics
                     , LC3b.Utils
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , mtl >= 2.2 && < 2.3
                     , transformers >= 0.5 && < 0.6
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall

executable lc3b-sim
  hs-source-dirs:      lib, sim
  main-is:             Main.hs
  other-modules:       LC3b.Machine
                     , LC3b.Semantics
                     , LC3b.Utils
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , filepath >= 1.4 && < 1.5
                     , mtl >= 2.2 && < 2.3
                     , transformers >= 0.5 && < 0.6

executable lc3b-asm
  hs-source-dirs:      lib, asm
  main-is:             Main.hs
  other-modules:       LC3b.Assemble
                     , LC3b.Utils
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , filepath >= 1.4 && < 1.5
                     , mtl >= 2.2 && < 2.3
                     , transformers >= 0.5 && < 0.6

test-suite lc3b-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules:       LC3b.Assemble
                     , LC3b.Machine
                     , LC3b.Semantics
                     , LC3b.Utils
  hs-source-dirs: tests, lib
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , filemanip >= 0.3 && < 0.4
                     , filepath >= 1.4 && < 1.5
                     , mtl >= 2.2 && < 2.3
                     , tasty >= 0.11 && < 0.12
                     , tasty-hunit
                     , transformers >= 0.5 && < 0.6